PosTrack/PNLib-v3.1.33.5652/include/PNLib.h

// Register BVH string data callback handle if you want to deal with string type
PNLIB_API void PNRegisterBvhStringDataBoardcastHandle(void* customObject, PNEventBVHStringDataBoardcastCallback handle);
// Register BVH binary data callback handle if you want to deal with binary type
PNLIB_API void PNRegisterBvhBinaryDataBoardcastHandle(void* customObject, PNEventBVHBinaryDataBoardcastCallback handle);
// Register matrix type of BVH data callback handle if you want to get matrix string data
PNLIB_API void PNRegisterBvhMatrixDataBoardcastHandle(void* customObject, PNEventBVHMatrixDataBoardcastCallback handle);
// Change output type of BVH data. You must register the relevant callback handle before change to a certain one.
PNLIB_API void PNSetBvhDataBlockBoardcastType(BvhDataStreamTypes type);
// Disable BVH callback if you do not need it. Because BVH conve
PNLIB_API void PNEnableBvhDataBoardcast(PNBOOL isEnable);
// Change output type of Calculated data.
PNLIB_API void PNSetCalculatedDataBlockBoardcastType(CalculatedDataStreamTypes type);
// Register calculation data callback handle
PNLIB_API void PNRegisterCalculatedStringDataBoardcastHandle(void* customObject, PNEventCalculatedStringDataCallback handle);
// Register calculation data callback handle
PNLIB_API void PNRegisterCalculatedBinaryDataBoardcastHandle(void* customObject, PNEventCalculatedBinaryDataCallback handle);
// Change quaternion type in calculation frame data
PNLIB_API void PNSetCalculatedQuaternionDataType(OutputQuaternionTypes type);
// Change Acceleration type in calculation frame data
PNLIB_API void PNSetCalculatedAccelerationDataType(OutputAccelerationTypes type);
// Change Gyro type in calculation frame data
PNLIB_API void PNSetCalculatedGyroDataType(OutputGyroType type);
// Enable/disable calculation data callback
PNLIB_API void PNEnableCalculationDataBoardcast(PNBOOL enable);
// Register raw data playing progress callback
PNLIB_API void PNRegisterRawDataPlayingProgressHandle(void* customObject, PNEventPlayProgressCallback handle);
// Register raw data parsed data callback
PNLIB_API void PNRegisterPlayingRawDataParsedHandle(void* customObject, PNEventRawDataParsedCallback handle);
// Register prop data callback handle if prop node enabled
PNLIB_API void PNRegisterPropDataCallbackHandle(void* customObject, PNEventPropDataCallback handle);
// Set avatar's bone dimensions
PNLIB_API void PNSetBoneDimensions(int avatarIndex, BoneDimension* dimensions);
// Get avatar's bone dimensions
PNLIB_API void PNGetBoneDimensions(int avatarIndex, BoneDimension* dimsBuffer);
// Get avatar's bvh inheritance
PNLIB_API const char* PNGetBvhInheritanceTxt(int avatarIndex);
// Get avatar's bone length with name
PNLIB_API void PNGetBVHBoneInfo(int avatarIndex, int bvhBoneIndex, BoneInfo* boneInfo);
// Open raw file to replay the captured motion data, return the avatar number in this motion data file
PNLIB_API int PNOpenRawDataFile(char* filename);
// Get total frames in opened raw file
PNLIB_API unsigned long PNRawDataPlayGetTotalFrames();
// 将播放位置移动到pos，如果超出范围返回FALSE
// pos 允许从0 到 totalFrames-1
PNLIB_API PNBOOL PNRawDataPlaySetPlayingPosition(int pos);
// 返回从0 到 totalFrames-1的帧序号，如果不存在则返回-1
PNLIB_API unsigned long PNRawDataPlayGetPlayingPosition();
// 设置播放速度倍数
PNLIB_API void PNRawDataPlaySetSpeed(float ratio);
// 开始数据播放
PNLIB_API void PNRawDataPlayStart();
    
// 暂停原始数据播放
PNLIB_API void PNRawDataPlayPause();
    
// 停止原始数据播放
PNLIB_API void PNRawDataPlayStop();
// 控制播放顺序（正播为FALSE或者倒播TRUE）
PNLIB_API void PNRawDataEnableReversePlay(PNBOOL enable);
// 移到前一帧，返回前一帧的帧序号
PNLIB_API unsigned long PNRawDataPlaySetToPrev();
// 移到下一帧，返回下一帧的帧序号
PNLIB_API unsigned long PNRawDataPlaySetToNext();
// 关闭原始文件
PNLIB_API void PNCloseRawDataFile();
// 导出中间数据格式文件
PNLIB_API char* PNExportCalculationData(int avatarIndex);
PNLIB_API void  PNStopExportCalculationData(int avatarIndex);
// Export for BVH data, return file name
PNLIB_API char* PNExportBvhData(int avatarIndex);
PNLIB_API void  PNStopExportBvhData(int avatarIndex);
// 导出fbx格式数据
PNLIB_API char* PNExportFbxData(int avatarIndex);
PNLIB_API void  PNStopExportFbxData(int avatarIndex);
// 设置bvh数据格式
PNLIB_API void PNSetBvhDataFormat(PNBOOL isWithDisp, RotateOrders order);
    
// 输出bvh是否前缀一个reference
PNLIB_API void PNSetBvhDataWithReference(PNBOOL withReference);
// BVH data output compression flag
PNLIB_API void PNBvhBinaryDataOutputIsCompression(PNBOOL isCompression);
// 带位移的BVH输出的位移为世界坐标系的还是局部坐标系的
PNLIB_API void PNEnableBvhDataGlobalDisplacement(int avatarIndex, PNBOOL isGlobalDips);
// 调节每个模型的在绘图中的位置
PNLIB_API void PNAdjustPosition(int avatarIndex, float x, float y, float z);
// 
PNLIB_API void PNRotateFaceDirection(int avatarIndex, float yaw);
// 调节模型的倾斜度（左右、前后）
PNLIB_API void PNRotateModel(int avatarIndex, float pitch, float roll);// 调节模型朝向
PNLIB_API void PNZeroOutAllAvatar();                    // XY平面上归零
PNLIB_API void PNZeroOutPosition(int avatarIndex);      // XY平面上归零