PosTrack/PNLib-v3.1.33.5652/include/PNDataTypes.h

// BVH rotate orders
typedef enum _RotateOrders
{
    RO_XZY,
    RO_YXZ,
    RO_XYZ,
    RO_YZX,
    RO_ZXY,
    RO_ZYX,
    RO_Unknown,           // Unknown type
}RotateOrders;
// Quaternion types of output stream
typedef enum _OutputQuaternionTypes
{
    QT_GlobalRawQuat,        // Module Q, by global system
    QT_GlobalBoneQuat,       // Calibrated module Q(Bone Q) 
    QT_LocalBoneQuat,        // Quaternion with parent
    QT_Unknown,              // Unknown type
}OutputQuaternionTypes;
// Acceleration data types of output stream
typedef enum _OutputAccelerationTypes
{
    AT_ModuleRawData,         // Module A, by global system
    AT_GlobalData,            // Calibrated module A(Bone A) 
    AT_Unknown,               // Unknown type
}OutputAccelerationTypes;
// Gyro data types of output stream
typedef enum _OutputGyroType
{
    GY_ModuleRawData,         // Module W, by global system
    GY_GlobalData,            // Calibrated module W(Bone W) 
    GY_Unknown,               // Unknown type
}OutputGyroType;
// Bone dimensions, unit: meter
typedef struct _BoneDimension
{
    float Head;              // Bone length of head
    float Neck;              // Bone length of neck
    float Body;              // Length of body
    float ShoulderWidth;     // Width of shoulder
    float UpperArm;          // Bone length of upper arm
    float Forearm;           // Bone length of forearm
    float Palm;              // Bone length of hand
    float HipWidth;          // Width of hip
    float UpperLeg;          // Bone length of upper leg
    float LowerLeg;          // Bone length of lower leg
    float HeelHeight;        // Heel height
    float FootLength;        // Foot length
}BoneDimension;