PosTrack/PNLib-v3.1.33.5652/include/PNCallbacks.h

// Prop data callback
typedef void(__stdcall *PNEventPropDataCallback)(void* customObject, int avatarIndex, TEST_PropData* data);
// BVH string data boradcast callback
typedef void (__stdcall *PNEventBVHStringDataBoardcastCallback)(void* customObject, int avatarIndex, char* bvhData);
// BVH binary data boradcast callback
typedef void(__stdcall *PNEventBVHBinaryDataBoardcastCallback)(void* customObject, int avatarIndex, BvhOutputBinaryHeader* bbp, int packLen);