PosTrack/PNLib-v3.1.33.5652/include/PNLib.cs


        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNExportCalculationData(int avatarIndex);// 导出中间数据
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNStopExportCalculationData(int avatarIndex);// 导出中间数据

        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNExportBvhData(int avatarIndex);
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNStopExportBvhData(int avatarIndex);

        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNExportFbxData(int avatarIndex);// 导出fbx格式数据
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNStopExportFbxData(int avatarIndex);// 导出fbx格式数据

        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNRegisterRawDataPlayingProgressHandle(IntPtr customObject, PNPlayProgressCallback handle);

        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern int PNOpenRawDataFile(string filename);
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNCloseRawDataFile();
        
        // 是否使用真实时间（高精度计时器）播放raw文件
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNUseRealTimeToPlayRawFile(bool enable);
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern UInt32 PNRawDataPlayGetTotalFrames();
   
        // 将播放位置移动到pos，如果此帧已经经过积分，则返回true，否则返回false
        // pos 从0 到 totalFrames-1
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern bool PNRawDataPlaySetPlayingPosition(int pos);

        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern UInt32 PNRawDataPlayGetPlayingPosition();

        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNRawDataPlaySetSpeed(float percent);
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern UInt32 PNRawDataPlaySetToPrev();
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern UInt32 PNRawDataPlaySetToNext();
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNRawDataPlayStart();
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNRawDataEnableReversePlay(bool enable);
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNRawDataPlayPause();
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNRawDataPlayStop();

        // 设置单个原始数据包解压回调函数指针
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNRegisterPlayingRawDataParsedHandle(IntPtr customObject, PNRawDataParsedCallback handle);

        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        private static extern void PNSetBoneDimensions(int avatarIndex, IntPtr boneDimensions);
        public static void SetBoneDimensions(int avatarIndex, BoneDimension dimsBuffer)
        {
            int size = Marshal.SizeOf(typeof(BoneDimension));
            IntPtr buffer = Marshal.AllocHGlobal(size);
            Marshal.StructureToPtr(dimsBuffer, buffer, true); 
            PNSetBoneDimensions(avatarIndex, buffer);
            Marshal.FreeHGlobal(buffer);  
        }

        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNGetBoneDimensions(int avatarIndex, ref BoneDimension dimsBuffer);
        
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        private static extern  IntPtr PNGetBvhInheritanceTxt(int avatarIndex);
        public static string GetBvhInheritanceTxt(int avatarIndex)
        {
            IntPtr addr = PNGetBvhInheritanceTxt(avatarIndex);
            return Marshal.PtrToStringAnsi(addr);
        }
        
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNGetBVHBoneInfo(int avatarIndex, int bvhBoneIndex, ref BVHBoneInfo bvhBoneInfo);

        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void SetAccOverflow(float reverseValue, float overValue);

        // 设置BVH回调
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNRegisterBvhStringDataBoardcastHandle(IntPtr customObject, PNEventBVHStringDataBoardcastCallback handle);
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNRegisterBvhBinaryDataBoardcastHandle(IntPtr customObject, PNEventBVHBinaryDataBoardcastCallback handle);
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNSetBvhDataBlockBoardcastType(NetDataOutputBlockTypes type);
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNSetBvhDataFormat(bool isWithDisp, RotateOrders order);
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNSetBvhDataWithReference(bool withReference);
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNBvhBinaryDataOutputIsCompression(bool isCompression);
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNEnableBvhDataBoardcast(bool enable);
        // 带位移的BVH输出的位移为世界坐标系的还是局部坐标系的
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNEnableBvhDataGlobalDisplacement(int avatarIndex, bool isGlobalDips);
        // 设置中间数据的格式
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNSetCalculatedDataBlockBoardcastType(NetDataOutputBlockTypes type);
        // 设置中间数据输出的对应个类型
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNSetCalculatedQuaternionDataType(OutputQuaternionTypes type);
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNSetCalculatedAccelerationDataType(OutputAccelerationTypes type);
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNSetCalculatedGyroDataType(OutputGyroType type);

        // 初始化实时中间数据callback
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNRegisterCalculatedStringDataBoardcastHandle(IntPtr customObject, PNCalculationDataCallback handle);
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNRegisterCalculatedBinaryDataBoardcastHandle(IntPtr customObject, PNCalculatedBinaryDataCallback handle);
        // 激活实时中间数据callback
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNEnableCalculationDataBoardcast(bool enable);
        
        
        // 设置Prop数据输出回调函数
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNRegisterPropDataCallbackHandle(IntPtr customObject, PNEventPropDataCallback handle);


        // 初始化实时M矩阵数据callback
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNRegisterBvhMatrixDataBoardcastHandle(IntPtr customObject, PNMatrixDataCallback handle);
        // 激活实时M矩阵数据callback
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNEnableRealtimeMatrixData();
        // 禁用实时M矩阵数据callback
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNDisableRealtimeMatrixData();

        /// <summary>
        /// 旋转模型
        /// </summary>
        /// <param name="pitch">前后仰角</param>
        /// <param name="roll">左右倾斜角</param>
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNRotateModel(int avatar, float pitch, float roll); // 调节模型朝向
        /// <summary>
        /// 调节模型朝向
        /// </summary>
        /// <param name="yaw">左右朝向</param>
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNRotateFaceDirection(int avatar, float yaw);
        
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNAdjustPosition(int avatarIndex, float x, float y, float z);

        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNZeroOutPosition(int avatar);             // 位置归零
        [DllImport("PNLib.dll", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, ExactSpelling = true)]
        public static extern void PNZeroOutAllAvatar();             // 位置归零
        
